xiaomaivideo-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xiaomaivideo-ws
  namespace: common
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: xiaomaivideo-ws
  template:
    metadata:
      labels:
        app: xiaomaivideo-ws
    spec:
#      nodeName: ecs-3710
      containers:
        - name: xiaomaivideo-ws
          image: xiaomaivideo-ws:v1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8899
            - containerPort: 8719
            - containerPort: 18730

---

apiVersion: v1
kind: Service
metadata:
  name: xiaomaivideo-ws-svc
  namespace: common
  labels:
    app: xiaomaivideo-ws
spec:
  ports:
  - port: 8899
    protocol: TCP
    name: server
    targetPort: 8899
  - port: 8719
    protocol: TCP
    name: sentinel-push
    targetPort: 8719
  - port: 18730
    protocol: TCP
    name: sentinel-cluster-server
    targetPort: 18730
  selector:
    app: xiaomaivideo-ws
