myapp-ingress.yaml
# ingress-test.yaml，配置ingress规则
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: common
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "100M"
spec:
  rules:
  - http:
      paths: 
      - path: /nacos
        backend:
          serviceName: nacos-headless
          servicePort: 8848
      - path: /rest
        backend:
          serviceName: xiaomaivideo-svc
          servicePort: 8088
      - path: /
        backend:
          serviceName: sentinel
          servicePort: 8858
      - path: /rest/api
        pathType: Exact
        backend:
          serviceName: fileupload-svc
          servicePort: 8481
