ws-ingress.yaml
apiVersion: extensions/v1beta1     
kind: Ingress    
metadata:           
  name: ws-ingress-nginx
  namespace: common
  annotations:           
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: $binary_remote_addr
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Upgrade "websocket";
       proxy_set_header Connection "Upgrade";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy_connect_timeout: "3600"
spec:      
  rules: 
  - http:
      paths: 
      - path: /ws
        backend:
          serviceName: xiaomaivideo-ws-svc
          servicePort: 8899
